<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_old"
    android:orientation="vertical"
    android:id="@+id/detail_produk"
    tools:context=".activity.DetailProdukActivity">

    <include
        layout="@layout/toolbar_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/div_footer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_produk"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:background="@color/white"
                    android:src="@drawable/acer"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_nama_produk"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_marginEnd="10dp"
                            android:ellipsize="marquee"
                            android:maxLines="3"
                            android:text="@string/nama_produk"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tv_harga_produk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:layout_marginTop="10dp"
                        android:text="@string/rp0"
                        android:textColor="@color/search"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_marginTop="30dp"
                        android:text="@string/pembelian_dalam_jumlah_besar_hubungi"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_marginTop="10dp"
                        android:text="@string/ketuttangkas17_gmail_com"
                        android:textColor="@color/search"
                        android:textSize="13sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ECECEC" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_margin="15dp"
                    android:text="@string/deskripsi"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/deskripsi_barang"
                    android:textColor="@color/search"
                    android:textSize="13sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="#ECECEC" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/div_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp">

            <RelativeLayout
                android:id="@+id/btn_keranjang_produk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:srcCompat="@drawable/ic_baseline_add_shopping_cart_24"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_beli_sekarang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:background="@color/search">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_centerInParent="true"
                    android:text="@string/beli_sekarang"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>