<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PengirimanActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_old"
            android:orientation="vertical"
            android:padding="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="25dp"
                    android:src="@drawable/ic_baseline_local_shipping_24"
                    tools:ignore="ContentDescription"
                    app:tint="@color/search" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img1"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    android:text="Pengiriman"
                    tools:ignore="HardcodedText" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_toStartOf="@+id/img2"
                    android:layout_toEndOf="@+id/img1"
                    android:background="#CFCFCF" />

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_baseline_payment_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img2"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    android:text="Metode Pembayaran"
                    tools:ignore="HardcodedText" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_toStartOf="@+id/img3"
                    android:layout_toEndOf="@+id/img2"
                    android:background="#CFCFCF" />

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="25dp"
                    android:src="@drawable/ic_baseline_check_circle_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img3"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/white"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="22dp"
                    android:text="Selesai"
                    tools:ignore="HardcodedText" />


            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginTop="20dp"
                android:text="@string/alamat_pengiriman"
                android:textColor="@color/search"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/div_kosong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/pilih_alamat_pengiriman"
                android:visibility="visible" />

            <androidx.cardview.widget.CardView
                android:id="@+id/div_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/login"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/btn_edit"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">

                        <TextView
                            android:id="@+id/tv_nama"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:layout_marginTop="4dp"
                            android:ellipsize="marquee"
                            android:text="@string/nama"
                            android:textColor="@color/green_old" />

                        <TextView
                            android:id="@+id/tv_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/_0812345678"
                            android:textColor="@color/green_old"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_alamat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/alamat"
                            android:textColor="@color/green_old"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_tambahAlamat"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/search"
                android:fontFamily="@font/poppins_regular"
                android:paddingHorizontal="20dp"
                android:text="@string/tambah_alamat"
                android:textAllCaps="false"
                android:textColor="@color/green_old"
                android:textSize="11sp" />

            <LinearLayout
                android:id="@+id/div_metodePengiriman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/pilih_metode_pengiriman"
                    android:textColor="@color/search"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_bold" />

                <Spinner
                    android:id="@+id/spn_kurir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:backgroundTint="@color/login"
                    android:minHeight="48dp"
                    android:textSize="14sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/metode_pengiriman"
                    android:textColor="@color/search"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_bold" />

                <TextView
                    android:id="@+id/tv_kosong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="* Pilih metode pengiriman"
                    android:visibility="gone"
                    tools:ignore="HardcodedText" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/div_pengiriman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/login"
                    android:layout_marginTop="10dp"
                    android:visibility="visible"
                    app:cardElevation="0dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_metode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/catatan_pengiriman"
                android:textColor="@color/search"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_bold"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/login">

                <EditText
                    android:id="@+id/edt_catatan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/catatan_untuk_penjual_opsional"
                    android:minHeight="48dp"
                    android:textColor="@color/green_old"
                    android:textColorHint="@color/green_old"
                    android:textSize="14sp"
                    android:inputType="text"
                    android:importantForAutofill="no" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/rekap_belanja"
                android:textColor="@color/search"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/login"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:textColor="@color/green_old"
                            android:text="@string/total_belanja"/>

                        <TextView
                            android:id="@+id/tv_totalBelanja"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/green_old"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="right"
                            android:text="Rp0"
                            tools:ignore="HardcodedText,RtlHardcoded" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EAEAEA" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:textColor="@color/green_old"
                            android:text="@string/biaya_pengiriman"/>

                        <TextView
                            android:id="@+id/tv_ongkir"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:textColor="@color/green_old"
                            android:gravity="right"
                            android:text="Rp0"
                            tools:ignore="HardcodedText,RtlHardcoded" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EAEAEA" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:textColor="@color/green_old"
                            android:text="@string/total"/>

                        <TextView
                            android:id="@+id/tv_total"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:gravity="right"
                            android:text="Rp0"
                            android:textColor="@color/red"
                            tools:ignore="HardcodedText,RtlHardcoded" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_bayar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="15dp"
                android:backgroundTint="@color/search"
                android:paddingHorizontal="15dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/bayar"
                android:textAllCaps="false"
                android:textColor="@color/green_old" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>