<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.PembayaranActivity"
    android:background="@color/green_old">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:src="@drawable/ic_baseline_local_shipping_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img1"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:text="@string/pengiriman" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            android:layout_toStartOf="@+id/img2"
            android:layout_toEndOf="@+id/img1"
            android:background="#CFCFCF" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_baseline_payment_24"
            app:tint="@color/search"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img2"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:text="@string/metode_pembayaran" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            android:layout_toStartOf="@+id/img3"
            android:layout_toEndOf="@+id/img2"
            android:background="#CFCFCF" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:src="@drawable/ic_baseline_check_circle_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img3"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="22dp"
            android:text="@string/selesai" />


    </RelativeLayout>

    <LinearLayout
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/search"
            android:text="Metode Pembayaran"
            tools:ignore="HardcodedText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</LinearLayout>